force-app/main/default/objects/Authorization__c/fields/AccountCode__c.field-meta.xml
<CustomField>
    <fullName>AccountCode__c</fullName>
    <label>Account Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>