force-app/main/default/objects/Authorization__c/fields/AuthorizationCapCode__c.field-meta.xml
<CustomField>
    <fullName>AuthorizationCapCode__c</fullName>
    <label>Authorization Cap Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>