force-app/main/default/objects/Authorization__c/fields/AuthorizationExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>AuthorizationExpirationDate__c</fullName>
    <label>Authorization Expiration Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>