force-app/main/default/objects/Authorization__c/fields/AuthorizationNumber__c.field-meta.xml
<CustomField>
    <fullName>AuthorizationNumber__c</fullName>
    <label>Authorization Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>