force-app/main/default/objects/Authorization__c/fields/AuthorizationType__c.field-meta.xml
<CustomField>
    <fullName>AuthorizationType__c</fullName>
    <label>Authorization Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Agency with Choice</fullName>
            </value>
            <value>
                <fullName>Daycare - Respite</fullName>
            </value>
            <value>
                <fullName>FMS Daycare</fullName>
            </value>
            <value>
                <fullName>FMS Respite</fullName>
            </value>
            <value>
                <fullName>FMS Transportation</fullName>
            </value>
            <value>
                <fullName>Homemaker</fullName>
            </value>
            <value>
                <fullName>Independent Living Services</fullName>
            </value>
            <value>
                <fullName>PDS PA</fullName>
            </value>
            <value>
                <fullName>Personal Assistance</fullName>
            </value>
            <value>
                <fullName>Personal Care and Homemaker</fullName>
            </value>
            <value>
                <fullName>PIP</fullName>
            </value>
            <value>
                <fullName>Respite</fullName>
            </value>
            <value>
                <fullName>Social Recreation Coaching</fullName>
            </value>
            <value>
                <fullName>Specialized Respite</fullName>
            </value>
            <value>
                <fullName>Specialized Supervision</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>