force-app/main/default/objects/Authorization__c/fields/AuthorizationUnit__c.field-meta.xml
<CustomField>
    <fullName>AuthorizationUnit__c</fullName>
    <label>Authorization Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>