force-app/main/default/objects/Authorization__c/fields/BillRate__c.field-meta.xml
<CustomField>
    <fullName>BillRate__c</fullName>
    <label>Bill Rate</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>