force-app/main/default/objects/Authorization__c/fields/ChangeSummary__c.field-meta.xml
<CustomField>
    <fullName>ChangeSummary__c</fullName>
    <label>Change Summary</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>