force-app/main/default/objects/Authorization__c/fields/DescriptionofService__c.field-meta.xml
<CustomField>
    <fullName>DescriptionofService__c</fullName>
    <label>Description of Service</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>