force-app/main/default/objects/Authorization__c/fields/MaxAuthAmount__c.field-meta.xml
<CustomField>
    <fullName>MaxAuthAmount__c</fullName>
    <label>Max Auth Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>