force-app/main/default/objects/Authorization__c/fields/MaxNumberofMonths__c.field-meta.xml
<CustomField>
    <fullName>MaxNumberofMonths__c</fullName>
    <label>Max Number of Months</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>