force-app/main/default/objects/Authorization__c/fields/Prorated__c.field-meta.xml
<CustomField>
    <fullName>Prorated__c</fullName>
    <label>Prorated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>