force-app/main/default/objects/Authorization__c/fields/ReferralDateOfServiceType__c.field-meta.xml
<CustomField>
    <fullName>ReferralDateOfServiceType__c</fullName>
    <label>Referral Date of Service Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>