force-app/main/default/objects/Authorization__c/fields/ServiceModel__c.field-meta.xml
<CustomField>
    <fullName>ServiceModel__c</fullName>
    <label>Service Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>AWC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>