force-app/main/default/objects/Authorization__c/fields/TotalAuthorizedHours__c.field-meta.xml
<CustomField>
    <fullName>TotalAuthorizedHours__c</fullName>
    <label>Total Authorized Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>