force-app/main/default/objects/Authorization__c/fields/UCI__c.field-meta.xml
<CustomField>
    <fullName>UCI__c</fullName>
    <label>UCI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>