force-app/main/default/objects/Authorization__c/fields/UnitsType__c.field-meta.xml
<CustomField>
    <fullName>UnitsType__c</fullName>
    <label>Units Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Quarter Hourly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>