force-app/main/default/objects/Authorization__c/recordTypes/CS_Authorization.recordType-meta.xml
<RecordType>
    <fullName>CS_Authorization</fullName>
    <active>true</active>
    <description>Community Support</description>
    <label>CS Authorization</label>
</RecordType>